[gd_scene load_steps=15 format=3 uid="uid://k72qkss8srnd"]

[ext_resource type="Texture2D" uid="uid://cwkxjv0vvkjmm" path="res://assets/LevelInput.png" id="1_hga22"]
[ext_resource type="Script" uid="uid://bqjonw87xfvop" path="res://scenes/objects/level_in_out/level_input.gd" id="1_regqu"]
[ext_resource type="Script" uid="uid://dmbgxyol7327d" path="res://scenes/utils/resettable.gd" id="2_regqu"]
[ext_resource type="Script" uid="uid://cwhvnxwvdhkh5" path="res://scenes/utils/link/movement/number_movement.gd" id="3_f8v14"]
[ext_resource type="PackedScene" uid="uid://bjwa7poyvyxhu" path="res://scenes/utils/link/connection/connection_area.tscn" id="4_mr1dq"]
[ext_resource type="Script" uid="uid://bfib056ywhjif" path="res://scenes/utils/highlight/highlightable.gd" id="6_mr1dq"]
[ext_resource type="Script" uid="uid://bm1he3x5w8vxv" path="res://scripts/resources/HighlightOptions.gd" id="7_auqp5"]
[ext_resource type="PackedScene" uid="uid://egp0h1iv4mjx" path="res://scenes/ui/number_listing/number_listing.tscn" id="9_1sse5"]
[ext_resource type="Script" uid="uid://ck6y410gncrcr" path="res://scripts/mouse_interaction_area2d.gd" id="9_cn4sb"]
[ext_resource type="PackedScene" uid="uid://dm2dffmkn1e7t" path="res://scenes/utils/link/activation/activation.tscn" id="10_cn4sb"]

[sub_resource type="LabelSettings" id="LabelSettings_regqu"]
line_spacing = 0.0
font_size = 32
outline_size = 8
outline_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_auqp5"]
radius = 32.0

[sub_resource type="Resource" id="Resource_1sse5"]
script = ExtResource("7_auqp5")
type = 0
flow_in = false
flow_out = true
metadata/_custom_type_script = "uid://bm1he3x5w8vxv"

[sub_resource type="CircleShape2D" id="CircleShape2D_x705m"]
radius = 32.0

[node name="LevelInput" type="Node2D"]
script = ExtResource("1_regqu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hga22")

[node name="NextNumber" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.5
offset_right = 20.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_regqu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resettable" type="Node" parent="."]
script = ExtResource("2_regqu")
metadata/_custom_type_script = "uid://dmbgxyol7327d"

[node name="NumberMovement" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("3_f8v14")
root = NodePath("..")
receives = false
metadata/_custom_type_script = "uid://cwhvnxwvdhkh5"

[node name="ConnectionArea" parent="." node_paths=PackedStringArray("activatable", "number_movement") instance=ExtResource("4_mr1dq")]
collision_layer = 12
receives = false
activatable = NodePath("../Activation")
number_movement = NodePath("../NumberMovement")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectionArea"]
visible = false
shape = SubResource("CircleShape2D_auqp5")

[node name="Highlightable" type="Node" parent="." node_paths=PackedStringArray("scale_target", "outline_target")]
script = ExtResource("6_mr1dq")
highlight_options = SubResource("Resource_1sse5")
scale_target = NodePath("../Sprite2D")
outline_target = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://bfib056ywhjif"

[node name="MouseInteractionArea2D" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 0
script = ExtResource("9_cn4sb")
metadata/_custom_type_script = "uid://ck6y410gncrcr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseInteractionArea2D"]
shape = SubResource("CircleShape2D_x705m")

[node name="NumberListing" parent="." node_paths=PackedStringArray("mouse_area") instance=ExtResource("9_1sse5")]
unique_name_in_owner = true
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = 0.0
grow_vertical = 0
pivot_offset = Vector2(30, 30)
size_flags_horizontal = 6
mouse_area = NodePath("../MouseInteractionArea2D")

[node name="Activation" parent="." node_paths=PackedStringArray("target") instance=ExtResource("10_cn4sb")]
target = NodePath("..")
trigger_signals = Array[String](["empty"])
auto = 0

[connection signal="reset_requested" from="Resettable" to="." method="reset"]
[connection signal="requesting_copy" from="NumberMovement" to="." method="move_number" binds= [true]]
[connection signal="requesting_move" from="NumberMovement" to="." method="move_number"]
[connection signal="success_activated" from="Activation" to="Highlightable" method="play_outline_animation"]
